fixed layout on mobile zoom

--- a/assets/scss/_components.scss
+++ b/assets/scss/_components.scss
@@ -1,8 +1,7 @@
 .qr {
-  margin: $space-200;
   inline-size: 100%;
   max-width: pxToRem(320);
-  min-width: pxToRem(170);
+  min-width: pxToRem(140);
   padding: $space-200 $space-200 $space-500 $space-200;
   text-align: center;
   background-color: #fff;
