--- a/public/index.css
+++ b/public/index.css
@@ -59,9 +59,8 @@ h6 {
   inline-size: 100%;
   background-color: #fff;
   border-radius: 20px;
-  min-width: 10.625rem;
+  min-width: 8.75rem;
   max-width: 20rem;
-  margin: 1rem;
   padding: 1rem 1rem 2.5rem;
   box-shadow: 5px 15px 10px 2px #0000001a;
 }
